ScalarWave: SphericalGaussian initial data -- move to a version that is both smooth at r=0 and diffuses outward

--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -579,13 +579,15 @@
    "source": [
     "<a id='sphericalgaussian'></a>\n",
     "\n",
-    "## Step 4.b: The Spherical Gaussian Solution (*Courtesy Thiago Assumpção*) \\[Back to [top](#toc)\\]\n",
+    "## Step 4.b: The Spherical Gaussian Solution \\[Back to [top](#toc)\\]\n",
     "$$\\label{sphericalgaussian}$$\n",
     "\n",
-    "Here we will implement the (outgoing) spherical Gaussian solution:\n",
-    "$$\n",
-    "u(r,t) =\\frac{\\exp\\left[\\frac{-(r-ct)^2}{2 \\sigma^2}\\right]}{r}\n",
-    "$$\n",
+    "Here we will implement the spherical Gaussian solution, consists of ingoing and outgoing wave fronts:\n",
+    "\\begin{align}\n",
+    "u(r,t) &= u_{\\rm out}(r,t) + u_{\\rm in}(r,t),\\ \\ \\text{where}\\\\\n",
+    "u_{\\rm out}(r,t) &=\\frac{r-ct}{r} \\exp\\left[\\frac{-(r-ct)^2}{2 \\sigma^2}\\right] \\\\\n",
+    "u_{\\rm in}(r,t) &=\\frac{r+ct}{r} \\exp\\left[\\frac{-(r+ct)^2}{2 \\sigma^2}\\right] \\\\\n",
+    "\\end{align}\n",
     "where $c$ is the wavespeed, and $\\sigma$ is the width of the Gaussian (i.e., the \"standard deviation\")."
    ]
   },
@@ -600,7 +602,7 @@
     "\n",
     "# Step 2: Declare free parameters intrinsic to these initial data\n",
     "time  = par.Cparameters(\"REAL\", thismodule, \"time\",0.0)\n",
-    "sigma = par.Cparameters(\"REAL\", thismodule, \"sigma\",1.0)\n",
+    "sigma = par.Cparameters(\"REAL\", thismodule, \"sigma\",3.0)\n",
     "\n",
     "# Step 4: Compute r\n",
     "r = sp.sympify(0)\n",
@@ -609,7 +611,9 @@
     "r = sp.sqrt(r)\n",
     "\n",
     "# Step 5: Set initial data for uu and vv, where vv_ID = \\partial_t uu_ID.\n",
-    "uu_ID_SphericalGaussian = sp.exp(- (r - wavespeed*time)**2 / (2*sigma**2) ) / r\n",
+    "uu_ID_SphericalGaussianOUT = +(r - wavespeed*time)/r * sp.exp( -(r - wavespeed*time)**2 / (2*sigma**2) )\n",
+    "uu_ID_SphericalGaussianIN  = +(r + wavespeed*time)/r * sp.exp( -(r + wavespeed*time)**2 / (2*sigma**2) )\n",
+    "uu_ID_SphericalGaussian = uu_ID_SphericalGaussianOUT + uu_ID_SphericalGaussianIN\n",
     "vv_ID_SphericalGaussian = sp.diff(uu_ID_SphericalGaussian, time)"
    ]
   },
@@ -617,9 +621,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Since the wave equation is linear, both the leftgoing and rightgoing waves must satisfy the wave equation, which implies that their sum also satisfies the wave equation. \n",
+    "\n",
     "Next we verify that $u(r,t)$ satisfies the wave equation, by computing\n",
-    "$$\\left(c^2 \\nabla^2 - \\partial_t^2 \\right)\\ \\frac{\\exp\\left[\\frac{-(r-ct)^2}{2 \\sigma^2}\\right]}{r},$$\n",
-    "and confirming the result is exactly zero."
+    "$$\\left(c^2 \\nabla^2 - \\partial_t^2 \\right)\\left\\{u_{\\rm R}(r,t)\\right\\},$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\\left(c^2 \\nabla^2 - \\partial_t^2 \\right)\\left\\{u_{\\rm L}(r,t)\\right\\},$$\n",
+    "\n",
+    "are separately zero. We do this because SymPy has difficulty simplifying the combined expression."
    ]
   },
   {
@@ -628,24 +639,24 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
     }
    ],
    "source": [
-    "sp.simplify(wavespeed**2*(sp.diff(uu_ID_SphericalGaussian,xx[0],2) + \n",
-    "                          sp.diff(uu_ID_SphericalGaussian,xx[1],2) + \n",
-    "                          sp.diff(uu_ID_SphericalGaussian,xx[2],2))\n",
-    "            - sp.diff(uu_ID_SphericalGaussian,time,2))"
+    "print(sp.simplify(wavespeed**2*(sp.diff(uu_ID_SphericalGaussianOUT,xx[0],2) + \n",
+    "                                sp.diff(uu_ID_SphericalGaussianOUT,xx[1],2) + \n",
+    "                                sp.diff(uu_ID_SphericalGaussianOUT,xx[2],2))\n",
+    "                - sp.diff(uu_ID_SphericalGaussianOUT,time,2)) )\n",
+    "\n",
+    "print(sp.simplify(wavespeed**2*(sp.diff(uu_ID_SphericalGaussianIN,xx[0],2) + \n",
+    "                                sp.diff(uu_ID_SphericalGaussianIN,xx[1],2) + \n",
+    "                                sp.diff(uu_ID_SphericalGaussianIN,xx[2],2))\n",
+    "                    - sp.diff(uu_ID_SphericalGaussianIN,time,2)))"
    ]
   },
   {
