Tutorial-ScalarWave: fix the description at the top. Thanks Thiago Assumpção for catching it!

--- a/Tutorial-ScalarWave.ipynb
+++ b/Tutorial-ScalarWave.ipynb
@@ -18,7 +18,7 @@
     "## Authors: Zach Etienne & Thiago Assumpção\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "## This module generates the C Code for the Scalarwave in Cartesian coordinates and sets up [Plane Wave Initial Data](https://en.wikipedia.org/wiki/Initial_value_problem). \n",
+    "## This module generates the C Code for the Scalarwave in Cartesian coordinates and sets up either monochromatic plane wave or spherical Gaussian [Initial Data](https://en.wikipedia.org/wiki/Initial_value_problem). \n",
     "\n",
     "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
