--- a/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
@@ -93,15 +93,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting TOV/Polytropic_EOSs_validation.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile $validation_file_path\n",
     "## Polytropic EOSs Python Module\n",
@@ -1402,7 +1394,7 @@
     "IllinoisGRMHD::rho_b_atm      = %.15e\n",
     "NRPyPlusTOVID::rho_atmosphere = %.15e\n",
     "\n",
-    "# Set rho_ppoly_tab_in\"\"\" %(IDfilename,EOS_struct.neos,tau_atmosphere,EOS_struc.K_poly_tab[0],Kpoly_atm,rho_atmosphere,rho_atmosphere))\n",
+    "# Set rho_ppoly_tab_in\"\"\" %(IDfilename,EOS_struct.neos,tau_atmosphere,EOS_struct.K_poly_tab[0],Kpoly_atm,rho_atmosphere,rho_atmosphere))\n",
     "            for j in range(EOS_struct.neos-1):\n",
     "                file.write(\"\"\"\n",
     "IllinoisGRMHD::rho_ppoly_tab_in[%d] = %.15e\"\"\" %(j,EOS_struct.rho_poly_tab[j]))\n",
@@ -1432,16 +1424,16 @@
     "# Set hybrid_k0 to K_ppoly_tab0\n",
     "EOS_omni::hybrid_k0 = %.15e\n",
     "\n",
-    "# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(eos.neos,eos.K_poly_tab[0]))\n",
-    "            for j in range(eos.neos-1):\n",
+    "# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(Gamma_thermal,EOS_struct.neos,EOS_struct.K_poly_tab[0]))\n",
+    "            for j in range(EOS_struct.neos-1):\n",
     "                file.write(\"\"\"\n",
-    "EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,eos.rho_poly_tab[j]))\n",
+    "EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,EOS_struct.rho_poly_tab[j]))\n",
     "            file.write(\"\"\"\n",
     "\n",
     "# Set hybrid_gamma to Gamma_ppoly_tab_in\"\"\")\n",
-    "            for j in range(eos.neos):\n",
+    "            for j in range(EOS_struct.neos):\n",
     "                file.write(\"\"\"\n",
-    "EOS_omni::hybrid_gamma[%d] = %.15e\"\"\" %(j,eos.Gamma_poly_tab[j]))\n",
+    "EOS_omni::hybrid_gamma[%d] = %.15e\"\"\" %(j,EOS_struct.Gamma_poly_tab[j]))\n",
     "            file.write(\"\"\"\n",
     "\n",
     "# Set hybrid_gamma_th to Gamma_th\n",
@@ -1466,8 +1458,8 @@
     "\n",
     "        eos        = set_up_EOS_parameters__Read_et_al_input_variables(EOSname)\n",
     "        atm_index  = polytropic_index_from_rhob(eos,rho_atmosphere)\n",
-    "        Gamma_atm  = eos.Gamma_poly_tab[atm_index]\n",
-    "        Kpoly_atm  = eos.K_poly_tab[atm_index]\n",
+    "        Gamma_atm  = EOS_struct.Gamma_poly_tab[atm_index]\n",
+    "        Kpoly_atm  = EOS_struct.K_poly_tab[atm_index]\n",
     "        IDfilename = \"outputTOVpolytrope-\"+EOSname+\".txt\"\n",
     "\n",
     "        # This is done for cosmetic purposes, so that parameter files\n",
@@ -1524,16 +1516,16 @@
     "# Set atmospheric value of rho\n",
     "IllinoisGRMHD::rho_b_atm = %.15e\n",
     "\n",
-    "# Set rho_ppoly_tab_in\"\"\" %(eos.neos,tau_atmosphere,eos.K_poly_tab[0],rho_atmosphere))\n",
-    "            for j in range(eos.neos-1):\n",
+    "# Set rho_ppoly_tab_in\"\"\" %(EOS_struct.neos,tau_atmosphere,EOS_struct.K_poly_tab[0],rho_atmosphere))\n",
+    "            for j in range(EOS_struct.neos-1):\n",
     "                file.write(\"\"\"\n",
-    "IllinoisGRMHD::rho_ppoly_tab_in[%d] = %.15e\"\"\" %(j,eos.rho_poly_tab[j]))\n",
+    "IllinoisGRMHD::rho_ppoly_tab_in[%d] = %.15e\"\"\" %(j,EOS_struct.rho_poly_tab[j]))\n",
     "            file.write(\"\"\"\n",
     "\n",
     "# Set Gamma_ppoly_tab_in\"\"\")\n",
-    "            for j in range(eos.neos):\n",
+    "            for j in range(EOS_struct.neos):\n",
     "                file.write(\"\"\"\n",
-    "IllinoisGRMHD::Gamma_ppoly_tab_in[%d] = %.15e\"\"\" %(j,eos.Gamma_poly_tab[j]))\n",
+    "IllinoisGRMHD::Gamma_ppoly_tab_in[%d] = %.15e\"\"\" %(j,EOS_struct.Gamma_poly_tab[j]))\n",
     "            file.write(\"\"\"\n",
     "\n",
     "# Set Gamma_th\n",
@@ -1572,16 +1564,16 @@
     "# Set hybrid_k0 to K_ppoly_tab0\n",
     "EOS_omni::hybrid_k0 = %.15e\n",
     "\n",
-    "# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(Gamma_thermal,IDfilename,rho_atmosphere,Gamma_atm,Kpoly_atm,eos.neos,eos.K_poly_tab[0]))\n",
-    "            for j in range(eos.neos-1):\n",
+    "# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(Gamma_thermal,IDfilename,rho_atmosphere,Gamma_atm,Kpoly_atm,EOS_struct.neos,EOS_struct.K_poly_tab[0]))\n",
+    "            for j in range(EOS_struct.neos-1):\n",
     "                file.write(\"\"\"\n",
-    "EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,eos.rho_poly_tab[j]))\n",
+    "EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,EOS_struct.rho_poly_tab[j]))\n",
     "            file.write(\"\"\"\n",
     "\n",
     "# Set hybrid_gamma to Gamma_ppoly_tab_in\"\"\")\n",
-    "            for j in range(eos.neos):\n",
+    "            for j in range(EOS_struct.neos):\n",
     "                file.write(\"\"\"\n",
-    "EOS_omni::hybrid_gamma[%d] = %.15e\"\"\" %(j,eos.Gamma_poly_tab[j]))\n",
+    "EOS_omni::hybrid_gamma[%d] = %.15e\"\"\" %(j,EOS_struct.Gamma_poly_tab[j]))\n",
     "            file.write(\"\"\"\n",
     "\n",
     "# Set hybrid_gamma_th to Gamma_th\n",
@@ -1867,16 +1859,93 @@
       "Validation may have failed. Check for non-whitespace differences below:\n",
       "--- trusted\n",
       "+++ new\n",
-      "@@ -775,7 +775,7 @@\n",
+      "@@ -745,7 +745,7 @@\n",
+      " IllinoisGRMHD::rho_b_atm      = %.15e\n",
+      " NRPyPlusTOVID::rho_atmosphere = %.15e\n",
+      " \n",
+      "-# Set rho_ppoly_tab_in\"\"\" %(IDfilename,EOS_struct.neos,tau_atmosphere,EOS_struc.K_poly_tab[0],Kpoly_atm,rho_atmosphere,rho_atmosphere))\n",
+      "+# Set rho_ppoly_tab_in\"\"\" %(IDfilename,EOS_struct.neos,tau_atmosphere,EOS_struct.K_poly_tab[0],Kpoly_atm,rho_atmosphere,rho_atmosphere))\n",
+      "             for j in range(EOS_struct.neos-1):\n",
+      "                 file.write(\"\"\"\n",
+      " IllinoisGRMHD::rho_ppoly_tab_in[%d] = %.15e\"\"\" %(j,EOS_struct.rho_poly_tab[j]))\n",
+      "@@ -775,16 +775,16 @@\n",
       " # Set hybrid_k0 to K_ppoly_tab0\n",
       " EOS_omni::hybrid_k0 = %.15e\n",
       " \n",
-      "-# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(IDfilename,eos.neos,tau_atmosphere,eos.K_poly_tab[0],Kpoly_atm,rho_atmosphere,rho_atmosphere))\n",
-      "+# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(eos.neos,eos.K_poly_tab[0]))\n",
-      "             for j in range(eos.neos-1):\n",
+      "-# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(eos.neos,eos.K_poly_tab[0]))\n",
+      "-            for j in range(eos.neos-1):\n",
+      "+# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(Gamma_thermal,EOS_struct.neos,EOS_struct.K_poly_tab[0]))\n",
+      "+            for j in range(EOS_struct.neos-1):\n",
       "                 file.write(\"\"\"\n",
-      " EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,eos.rho_poly_tab[j]))\n",
-      "<generator object unified_diff at 0x11070d0c0>\n"
+      "-EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,eos.rho_poly_tab[j]))\n",
+      "+EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,EOS_struct.rho_poly_tab[j]))\n",
+      "             file.write(\"\"\"\n",
+      " \n",
+      " # Set hybrid_gamma to Gamma_ppoly_tab_in\"\"\")\n",
+      "-            for j in range(eos.neos):\n",
+      "+            for j in range(EOS_struct.neos):\n",
+      "                 file.write(\"\"\"\n",
+      "-EOS_omni::hybrid_gamma[%d] = %.15e\"\"\" %(j,eos.Gamma_poly_tab[j]))\n",
+      "+EOS_omni::hybrid_gamma[%d] = %.15e\"\"\" %(j,EOS_struct.Gamma_poly_tab[j]))\n",
+      "             file.write(\"\"\"\n",
+      " \n",
+      " # Set hybrid_gamma_th to Gamma_th\n",
+      "@@ -809,8 +809,8 @@\n",
+      " \n",
+      "         eos        = set_up_EOS_parameters__Read_et_al_input_variables(EOSname)\n",
+      "         atm_index  = polytropic_index_from_rhob(eos,rho_atmosphere)\n",
+      "-        Gamma_atm  = eos.Gamma_poly_tab[atm_index]\n",
+      "-        Kpoly_atm  = eos.K_poly_tab[atm_index]\n",
+      "+        Gamma_atm  = EOS_struct.Gamma_poly_tab[atm_index]\n",
+      "+        Kpoly_atm  = EOS_struct.K_poly_tab[atm_index]\n",
+      "         IDfilename = \"outputTOVpolytrope-\"+EOSname+\".txt\"\n",
+      " \n",
+      "         # This is done for cosmetic purposes, so that parameter files\n",
+      "@@ -867,16 +867,16 @@\n",
+      " # Set atmospheric value of rho\n",
+      " IllinoisGRMHD::rho_b_atm = %.15e\n",
+      " \n",
+      "-# Set rho_ppoly_tab_in\"\"\" %(eos.neos,tau_atmosphere,eos.K_poly_tab[0],rho_atmosphere))\n",
+      "-            for j in range(eos.neos-1):\n",
+      "+# Set rho_ppoly_tab_in\"\"\" %(EOS_struct.neos,tau_atmosphere,EOS_struct.K_poly_tab[0],rho_atmosphere))\n",
+      "+            for j in range(EOS_struct.neos-1):\n",
+      "                 file.write(\"\"\"\n",
+      "-IllinoisGRMHD::rho_ppoly_tab_in[%d] = %.15e\"\"\" %(j,eos.rho_poly_tab[j]))\n",
+      "+IllinoisGRMHD::rho_ppoly_tab_in[%d] = %.15e\"\"\" %(j,EOS_struct.rho_poly_tab[j]))\n",
+      "             file.write(\"\"\"\n",
+      " \n",
+      " # Set Gamma_ppoly_tab_in\"\"\")\n",
+      "-            for j in range(eos.neos):\n",
+      "+            for j in range(EOS_struct.neos):\n",
+      "                 file.write(\"\"\"\n",
+      "-IllinoisGRMHD::Gamma_ppoly_tab_in[%d] = %.15e\"\"\" %(j,eos.Gamma_poly_tab[j]))\n",
+      "+IllinoisGRMHD::Gamma_ppoly_tab_in[%d] = %.15e\"\"\" %(j,EOS_struct.Gamma_poly_tab[j]))\n",
+      "             file.write(\"\"\"\n",
+      " \n",
+      " # Set Gamma_th\n",
+      "@@ -915,16 +915,16 @@\n",
+      " # Set hybrid_k0 to K_ppoly_tab0\n",
+      " EOS_omni::hybrid_k0 = %.15e\n",
+      " \n",
+      "-# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(Gamma_thermal,IDfilename,rho_atmosphere,Gamma_atm,Kpoly_atm,eos.neos,eos.K_poly_tab[0]))\n",
+      "-            for j in range(eos.neos-1):\n",
+      "+# Set hybrid_rho to rho_ppoly_tab_in\"\"\" %(Gamma_thermal,IDfilename,rho_atmosphere,Gamma_atm,Kpoly_atm,EOS_struct.neos,EOS_struct.K_poly_tab[0]))\n",
+      "+            for j in range(EOS_struct.neos-1):\n",
+      "                 file.write(\"\"\"\n",
+      "-EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,eos.rho_poly_tab[j]))\n",
+      "+EOS_omni::hybrid_rho[%d] = %.15e\"\"\" %(j,EOS_struct.rho_poly_tab[j]))\n",
+      "             file.write(\"\"\"\n",
+      " \n",
+      " # Set hybrid_gamma to Gamma_ppoly_tab_in\"\"\")\n",
+      "-            for j in range(eos.neos):\n",
+      "+            for j in range(EOS_struct.neos):\n",
+      "                 file.write(\"\"\"\n",
+      "-EOS_omni::hybrid_gamma[%d] = %.15e\"\"\" %(j,eos.Gamma_poly_tab[j]))\n",
+      "+EOS_omni::hybrid_gamma[%d] = %.15e\"\"\" %(j,EOS_struct.Gamma_poly_tab[j]))\n",
+      "             file.write(\"\"\"\n",
+      " \n",
+      " # Set hybrid_gamma_th to Gamma_th\n",
+      "<generator object unified_diff at 0x11428e0c0>\n"
      ]
     }
    ],
@@ -2368,7 +2437,7 @@
       "MS1 : DONE after 19 iterations!\n",
       "MS1b: DONE after 19 iterations!\n",
       "MPA1: DONE after 22 iterations!\n",
-      "(BENCH) Finished generating plot data. Time elapsed: 104.97 seconds.\n"
+      "(BENCH) Finished generating plot data. Time elapsed: 103.87 seconds.\n"
      ]
     }
    ],
