latex_parser.py: added greek letter support, replaced parse_expr() with eval(); fixed issue with command multiplication

--- a/Tutorial-LaTeX_SymPy_Conversion.ipynb
+++ b/Tutorial-LaTeX_SymPy_Conversion.ipynb
@@ -53,7 +53,7 @@
     "<FACTOR>        -> <OPERAND> | (<EXPRESSION>) | [<EXPRESSION>]\n",
     "<OPERAND>       -> <SYMBOL> | <NUMBER> | <COMMAND>\n",
     "<NUMBER>        -> <RATIONAL> | <DECIMAL> | <INTEGER>\n",
-    "<COMMAND>       -> \\ ( <SQRT> | <FRAC> | ... )\n",
+    "<COMMAND>       -> \\ ( <GREEK_LETTER> | <SQRT> | <FRAC> )\n",
     "<SQRT>          -> sqrt [ [<INTEGER>] ] {<EXPRESSION>}\n",
     "<FRAC>          -> frac {<EXPRESSION>} {<EXPRESSION>}\n",
     "```\n",
