--- a/NRPyPN/PN-p_r.ipynb
+++ b/NRPyPN/PN-p_r.ipynb
@@ -79,8 +79,6 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "from outputC import *            # NRPy+: Core C code output module\n",
-    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations"
    ]
   },
@@ -132,8 +130,8 @@
     "            .subs(nU[0], one).subs(nU[1], zero).subs(nU[2], zero)\n",
     "\n",
     "    import PN_Hamiltonian_NS as H_NS\n",
-    "    H_NS.f_H_Newt__H_NS_1PN__H_NS_2PN(m1, m2, pU, nU, r)\n",
-    "    H_NS.f_H_NS_3PN(m1, m2, pU, nU, r)\n",
+    "    H_NS.f_H_Newt__H_NS_1PN__H_NS_2PN(m1, m2, p1U, n12U, r)\n",
+    "    H_NS.f_H_NS_3PN(m1, m2, p1U, n12U, r)\n",
     "\n",
     "    global Htot_xyplane_binary\n",
     "    Htot_xyplane_binary = make_replacements(+H_NS.H_Newt\n",
@@ -954,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
