--- a/Tutorial-Symbolic_Tensor_Rotation.ipynb
+++ b/Tutorial-Symbolic_Tensor_Rotation.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "from sympy import Quaternion as quat\n",
     "from sympy import Matrix\n",
-    "from sympy.functions import transpose\n",
+    "# from sympy.functions import transpose\n",
     "\n",
     "# Input:  tensor = 3-vector or (3x3)-matrix\n",
     "#         axis   = rotation axis (normal 3-vector)\n",
@@ -495,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   },
   "mimetype": "text/x-python",
   "name": "python",
