MaxwellCartesian & FishboneMoncriefID: Modernize formatting. No functional change

--- a/Tutorial-MaxwellCartesian.ipynb
+++ b/Tutorial-MaxwellCartesian.ipynb
@@ -75,11 +75,11 @@
    "outputs": [],
    "source": [
     "#Step P1: Import needed Python modules\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "from outputC import *\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
     "\n",
     "#Step P2: Name this Python module\n",
     "thismodule = \"MaxwellCartesian\"\n",
