SEOBNR: update v3 Hamiltonian notebook to remove extraneous expression.  One-line difference as expected in validation file; numerical value agrees with LALSuite to 14 significant digits.

--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -95,13 +95,12 @@
     "    1. [Step 7.b](#hdsum): $H_{\\rm D}$ Sum  \n",
     "        1. [Step 7.b.i](#hdsumterm1): $H_{\\rm D}$ Sum Term 1  \n",
     "        1. [Step 7.b.ii](#hdsumterm2): $H_{\\rm D}$ Sum Term 2\n",
-    "1. [Step 8](#dotproducts): Common Dot Products  \n",
-    "    1. [Step 8.a](#sdotskerr): ${\\bf S} \\cdot {\\bf S}_{\\rm Kerr}$  \n",
-    "    1. [Step 8.b](#sdotxi): ${\\bf S} \\cdot \\boldsymbol{\\xi}$  \n",
-    "    1. [Step 8.c](#sdotv): ${\\bf S} \\cdot {\\bf v}$  \n",
-    "    1. [Step 8.d](#sdotn): ${\\bf S} \\cdot {\\bf n}$  \n",
-    "    1. [Step 8.e](#sdotskerrhat): ${\\bf S} \\cdot \\hat{\\bf S}_{\\rm Kerr}$  \n",
-    "    1. [Step 8.f](#sstardotn): ${\\bf S}^{*} \\cdot {\\bf n}$\n",
+    "1. [Step 8](#dotproducts): Common Dot Products\n",
+    "    1. [Step 8.a](#sdotxi): ${\\bf S} \\cdot \\boldsymbol{\\xi}$  \n",
+    "    1. [Step 8.b](#sdotv): ${\\bf S} \\cdot {\\bf v}$  \n",
+    "    1. [Step 8.c](#sdotn): ${\\bf S} \\cdot {\\bf n}$  \n",
+    "    1. [Step 8.d](#sdotskerrhat): ${\\bf S} \\cdot \\hat{\\bf S}_{\\rm Kerr}$  \n",
+    "    1. [Step 8.e](#sstardotn): ${\\bf S}^{*} \\cdot {\\bf n}$\n",
     "1. [Step 9](#hreal_spin_combos): $H_{\\rm real}$ Spin Combination ${\\bf S}^{*}$  \n",
     "    1. [Step 9a](#sstar): ${\\bf S}^{*}$  \n",
     "    1. [Step 9b](#deltasigmastar): $\\Delta_{\\sigma^{*}}$  \n",
@@ -1428,46 +1427,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='sdotskerr'></a>\n",
-    "\n",
-    "## Step 8.a: ${\\bf S} \\cdot {\\bf S}_{\\rm Kerr}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{sdotskerr}$$\n",
-    "\n",
-    "We have\n",
-    "\n",
-    "\\begin{equation*}\n",
-    "    {\\bf S} \\cdot {\\bf S}_{\\rm Kerr} = S^{1} S^{1}_{\\rm Kerr} + S^{2} S^{2}_{\\rm Kerr} + S^{3} S^{3}_{\\rm Kerr}.\n",
-    "\\end{equation*}\n",
-    "\n",
-    "We define ${\\bf S}_{\\rm Kerr}$ in [this cell](#skerr)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to SEOBNR/Hamiltonian-Hreal_on_top.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile -a $Ccodesdir/Hamiltonian-Hreal_on_top.txt\n",
-    "\n",
-    "SdotSkerr = S1*Skerr1 + S2*Skerr2 + S3*Skerr3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id='sdotxi'></a>\n",
     "\n",
-    "## Step 8.b: ${\\bf S} \\cdot \\boldsymbol{\\xi}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 8.a: ${\\bf S} \\cdot \\boldsymbol{\\xi}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{sdotxi}$$\n",
     "\n",
     "We have\n",
@@ -1481,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1466,7 @@
    "source": [
     "<a id='sdotv'></a>\n",
     "\n",
-    "## Step 8.c: ${\\bf S} \\cdot {\\bf v}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 8.b: ${\\bf S} \\cdot {\\bf v}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{sdotv}$$\n",
     "\n",
     "We have\n",
@@ -1518,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1503,7 @@
    "source": [
     "<a id='sdotn'></a>\n",
     "\n",
-    "## Step 8.d: ${\\bf S} \\cdot {\\bf n}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 8.c: ${\\bf S} \\cdot {\\bf n}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{sdotn}$$\n",
     "\n",
     "We have\n",
@@ -1555,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1540,7 @@
    "source": [
     "<a id='sdotskerrhat'></a>\n",
     "\n",
-    "## Step 8.e: ${\\bf S} \\cdot \\hat{\\bf S}_{\\rm Kerr}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 8.d: ${\\bf S} \\cdot \\hat{\\bf S}_{\\rm Kerr}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{sdotskerrhat}$$\n",
     "\n",
     "We have\n",
@@ -1592,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1577,7 @@
    "source": [
     "<a id='sstardotn'></a>\n",
     "\n",
-    "## Step 8.f: ${\\bf S}^{*} \\cdot {\\bf n}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 8.e: ${\\bf S}^{*} \\cdot {\\bf n}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{sstardotn}$$\n",
     "\n",
     "We have\n",
@@ -1629,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2001,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2125,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2236,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2273,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2310,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2359,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2402,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2521,7 +2483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2596,7 +2558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2628,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2702,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2751,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2788,7 +2750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2825,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2862,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2899,7 +2861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2938,7 +2900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2975,7 +2937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -3012,7 +2974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -3049,7 +3011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3135,7 +3097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3172,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -3209,7 +3171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -3250,7 +3212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3292,7 +3254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -3348,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -3398,7 +3360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -3458,7 +3420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -3502,7 +3464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -3539,7 +3501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -3588,7 +3550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -3625,7 +3587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -3666,7 +3628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -3704,7 +3666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -3753,7 +3715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -3792,7 +3754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -3831,7 +3793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -3870,7 +3832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -3921,7 +3883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -3958,7 +3920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3997,7 +3959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -4040,7 +4002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -4077,7 +4039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -4114,7 +4076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -4165,7 +4127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -4200,7 +4162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -4237,7 +4199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -4274,7 +4236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -4309,7 +4271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -4342,7 +4304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -4460,7 +4422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 101,
    "metadata": {
     "scrolled": true
    },
@@ -4481,21 +4443,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
